--- a/test_anylogo.ipynb
+++ b/test_anylogo.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -36,15 +36,17 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>A</th>\n",
-       "      <th>C</th>\n",
-       "      <th>G</th>\n",
-       "      <th>T</th>\n",
+       "      <th>pos</th>\n",
+       "      <th>val_A</th>\n",
+       "      <th>val_C</th>\n",
+       "      <th>val_G</th>\n",
+       "      <th>val_T</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.94</td>\n",
        "      <td>1.04</td>\n",
@@ -52,6 +54,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>0.00</td>\n",
        "      <td>1.81</td>\n",
        "      <td>1.03</td>\n",
@@ -59,6 +62,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>0.00</td>\n",
        "      <td>1.47</td>\n",
        "      <td>1.15</td>\n",
@@ -66,6 +70,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>0.30</td>\n",
        "      <td>1.75</td>\n",
        "      <td>2.13</td>\n",
@@ -73,6 +78,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>0.07</td>\n",
        "      <td>0.73</td>\n",
        "      <td>0.41</td>\n",
@@ -83,15 +89,15 @@
        "</div>"
       ],
       "text/plain": [
-       "      A     C     G     T\n",
-       "0  0.00  0.94  1.04  0.30\n",
-       "1  0.00  1.81  1.03  0.65\n",
-       "2  0.00  1.47  1.15  0.14\n",
-       "3  0.30  1.75  2.13  0.00\n",
-       "4  0.07  0.73  0.41  0.00"
+       "   pos  val_A  val_C  val_G  val_T\n",
+       "0    0   0.00   0.94   1.04   0.30\n",
+       "1    1   0.00   1.81   1.03   0.65\n",
+       "2    2   0.00   1.47   1.15   0.14\n",
+       "3    3   0.30   1.75   2.13   0.00\n",
+       "4    4   0.07   0.73   0.41   0.00"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,9 +105,7 @@
    "source": [
     "# Load energy matrix\n",
     "energy_mat = pd.read_csv('crp_fullwt.26.txt',delim_whitespace=True)\n",
-    "\n",
-    "mat = anylogo.data.validate_mat(energy_mat)\n",
-    "mat.head()"
+    "energy_mat.head()"
    ]
   },
   {
