not sure what changed

--- a/test_anylogo.ipynb
+++ b/test_anylogo.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 52,
    "metadata": {
     "collapsed": true
    },
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
@@ -100,7 +100,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\tA\tC\tG\tT\r\n",
+      "pos\tA\tC\tG\tT\r\n",
       "0\t0.370165745856\t0.182320441989\t0.201657458564\t0.245856353591\r\n",
       "1\t0.408839779006\t0.129834254144\t0.162983425414\t0.298342541436\r\n",
       "2\t0.461325966851\t0.0745856353591\t0.10773480663\t0.35635359116\r\n",
