adding www-logo notebook

--- a/jupyter_notebooks/NajafabadiEtAl2017.ipynb
+++ b/jupyter_notebooks/NajafabadiEtAl2017.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from __future__ import division\n",
@@ -25,192 +27,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['.Keyboard',\n",
-       " '.LastResort',\n",
-       " '.SF Compact Display',\n",
-       " '.SF Compact Rounded',\n",
-       " '.SF Compact Text',\n",
-       " '.SF NS Display Condensed',\n",
-       " '.SF NS Text Condensed',\n",
-       " 'Adobe Arabic',\n",
-       " 'Adobe Caslon Pro',\n",
-       " 'Adobe Devanagari',\n",
-       " 'Adobe Fan Heiti Std',\n",
-       " 'Adobe Fangsong Std',\n",
-       " 'Adobe Garamond Pro',\n",
-       " 'Adobe Gothic Std',\n",
-       " 'Adobe Hebrew',\n",
-       " 'Adobe Heiti Std',\n",
-       " 'Adobe Kaiti Std',\n",
-       " 'Adobe Ming Std',\n",
-       " 'Adobe Myungjo Std',\n",
-       " 'Adobe Naskh',\n",
-       " 'Adobe Song Std',\n",
-       " 'Andale Mono',\n",
-       " 'Apple Braille',\n",
-       " 'Apple Chancery',\n",
-       " 'Apple LiGothic',\n",
-       " 'Apple LiSung',\n",
-       " 'Apple Symbols',\n",
-       " 'AppleGothic',\n",
-       " 'AppleMyungjo',\n",
-       " 'Arial',\n",
-       " 'Arial Black',\n",
-       " 'Arial Narrow',\n",
-       " 'Arial Rounded MT Bold',\n",
-       " 'Arial Unicode MS',\n",
-       " 'Ayuthaya',\n",
-       " 'BiauKai',\n",
-       " 'Big Caslon',\n",
-       " 'Birch Std',\n",
-       " 'Blackoak Std',\n",
-       " 'Bodoni 72 Smallcaps',\n",
-       " 'Bodoni Ornaments',\n",
-       " 'Bradley Hand',\n",
-       " 'Brush Script MT',\n",
-       " 'Brush Script Std',\n",
-       " 'Chalkduster',\n",
-       " 'Chaparral Pro',\n",
-       " 'Charlemagne Std',\n",
-       " 'Comic Sans MS',\n",
-       " 'Cooper Std',\n",
-       " 'Courier New',\n",
-       " 'DIN Alternate',\n",
-       " 'DIN Condensed',\n",
-       " 'DejaVu Sans',\n",
-       " 'DejaVu Sans Display',\n",
-       " 'DejaVu Sans Mono',\n",
-       " 'DejaVu Serif',\n",
-       " 'DejaVu Serif Display',\n",
-       " 'Diwan Thuluth',\n",
-       " 'Farisi',\n",
-       " 'Georgia',\n",
-       " 'Giddyup Std',\n",
-       " 'GungSeo',\n",
-       " 'Gurmukhi MT',\n",
-       " 'HeadLineA',\n",
-       " 'Hei',\n",
-       " 'Herculanum',\n",
-       " 'Hobo Std',\n",
-       " 'Hoefler Text',\n",
-       " 'Impact',\n",
-       " 'InaiMathi',\n",
-       " 'Kai',\n",
-       " 'Khmer Sangam MN',\n",
-       " 'Kokonor',\n",
-       " 'Kozuka Gothic Pr6N',\n",
-       " 'Kozuka Gothic Pro',\n",
-       " 'Kozuka Mincho Pr6N',\n",
-       " 'Kozuka Mincho Pro',\n",
-       " 'Krungthep',\n",
-       " 'Lao Sangam MN',\n",
-       " 'Letter Gothic Std',\n",
-       " 'LiHei Pro',\n",
-       " 'LiSong Pro',\n",
-       " 'LingWai SC',\n",
-       " 'LingWai TC',\n",
-       " 'Lithos Pro',\n",
-       " 'Luminari',\n",
-       " 'Mesquite Std',\n",
-       " 'Microsoft Sans Serif',\n",
-       " 'Minion Pro',\n",
-       " 'Mishafi',\n",
-       " 'Mishafi Gold',\n",
-       " 'Myriad Arabic',\n",
-       " 'Myriad Hebrew',\n",
-       " 'Myriad Pro',\n",
-       " 'Nueva Std',\n",
-       " 'OCR A Std',\n",
-       " 'Orator Std',\n",
-       " 'Osaka',\n",
-       " 'PCMyungjo',\n",
-       " 'PilGi',\n",
-       " 'Plantagenet Cherokee',\n",
-       " 'Poplar Std',\n",
-       " 'Prestige Elite Std',\n",
-       " 'Rosewood Std',\n",
-       " 'STFangsong',\n",
-       " 'STHeiti',\n",
-       " 'STIXGeneral',\n",
-       " 'STIXIntegralsD',\n",
-       " 'STIXIntegralsSm',\n",
-       " 'STIXIntegralsUp',\n",
-       " 'STIXIntegralsUpD',\n",
-       " 'STIXIntegralsUpSm',\n",
-       " 'STIXNonUnicode',\n",
-       " 'STIXSizeFiveSym',\n",
-       " 'STIXSizeFourSym',\n",
-       " 'STIXSizeOneSym',\n",
-       " 'STIXSizeThreeSym',\n",
-       " 'STIXSizeTwoSym',\n",
-       " 'STIXVariants',\n",
-       " 'Sathu',\n",
-       " 'Silom',\n",
-       " 'Skia',\n",
-       " 'Stencil Std',\n",
-       " 'Symbol',\n",
-       " 'System Font',\n",
-       " 'Tahoma',\n",
-       " 'Tekton Pro',\n",
-       " 'Times New Roman',\n",
-       " 'Toppan Bunkyu Midashi Gothic',\n",
-       " 'Toppan Bunkyu Midashi Mincho',\n",
-       " 'Toppan Bunkyu Mincho',\n",
-       " 'Trajan Pro',\n",
-       " 'Trattatello',\n",
-       " 'Trebuchet MS',\n",
-       " 'Verdana',\n",
-       " 'Wawati SC',\n",
-       " 'Wawati TC',\n",
-       " 'Webdings',\n",
-       " 'Weibei SC',\n",
-       " 'Weibei TC',\n",
-       " 'Wingdings',\n",
-       " 'Wingdings 2',\n",
-       " 'Wingdings 3',\n",
-       " 'YuGothic',\n",
-       " 'Yuppy SC',\n",
-       " 'Yuppy TC',\n",
-       " 'Zapf Dingbats',\n",
-       " 'Zapfino',\n",
-       " 'cmb10',\n",
-       " 'cmex10',\n",
-       " 'cmmi10',\n",
-       " 'cmr10',\n",
-       " 'cmss10',\n",
-       " 'cmsy10',\n",
-       " 'cmtt10']"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "logomaker.get_fontnames()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "#logomaker.get_fontnames()\n",
     "counts_mat = pd.read_csv('../data/DBF.logo.txt',delim_whitespace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -226,6 +55,7 @@
    ],
    "source": [
     "from matplotlib.ticker import FormatStrFormatter\n",
+    "import matplotlib.patches as patches\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
@@ -271,6 +101,9 @@
     "\n",
     "                   )\n",
     "\n",
+    "# Add the patch to the Axes\n",
+    "ax.add_patch(rect)\n",
+    "\n",
     "fig, ax = plt.subplots(figsize=[12,7])\n",
     "\n",
     "mpl.rcParams['font.size'] = 30\n",
@@ -284,15 +117,6 @@
     "\n",
     "fig.savefig('../output/NajafabadiEtAl2017.pdf')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
