--- a/examples/Example_Janganathan.ipynb
+++ b/examples/Example_Janganathan.ipynb
@@ -11,7 +11,8 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "% matplotlib inline\n",
+    "import pickle\n",
+    "% matplotlib notebook\n",
     "plt.ion()\n",
     "\n",
     "import sys\n",
