code review of validate_matrix() in src/validate.py

--- a/logomaker/examples/Example_CRP.ipynb
+++ b/logomaker/examples/Example_CRP.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -58,6 +60,13 @@
        "      <th>G</th>\n",
        "      <th>T</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pos</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
@@ -100,12 +109,13 @@
        "</div>"
       ],
       "text/plain": [
-       "          A         C         G         T\n",
-       "0  0.622079 -0.399616 -0.254186  0.031723\n",
-       "1  0.859060 -0.795804 -0.467750  0.404494\n",
-       "2  1.274899 -1.353918 -0.823403  0.902422\n",
-       "3  1.206839 -1.301502 -0.700051  0.794714\n",
-       "4  0.755913 -0.786614 -0.725213  0.755913"
+       "            A         C         G         T\n",
+       "pos                                        \n",
+       "0    0.622079 -0.399616 -0.254186  0.031723\n",
+       "1    0.859060 -0.795804 -0.467750  0.404494\n",
+       "2    1.274899 -1.353918 -0.823403  0.902422\n",
+       "3    1.206839 -1.301502 -0.700051  0.794714\n",
+       "4    0.755913 -0.786614 -0.725213  0.755913"
       ]
      },
      "execution_count": 2,
@@ -291,6 +301,272 @@
    ],
    "source": [
     "logomaker.list_color_schemes()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>C</th>\n",
+       "      <th>G</th>\n",
+       "      <th>T</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pos</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.370166</td>\n",
+       "      <td>0.182320</td>\n",
+       "      <td>0.201657</td>\n",
+       "      <td>0.245856</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.408840</td>\n",
+       "      <td>0.129834</td>\n",
+       "      <td>0.162983</td>\n",
+       "      <td>0.298343</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.461326</td>\n",
+       "      <td>0.074586</td>\n",
+       "      <td>0.107735</td>\n",
+       "      <td>0.356354</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.455801</td>\n",
+       "      <td>0.080110</td>\n",
+       "      <td>0.121547</td>\n",
+       "      <td>0.342541</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.370166</td>\n",
+       "      <td>0.127072</td>\n",
+       "      <td>0.132597</td>\n",
+       "      <td>0.370166</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.118785</td>\n",
+       "      <td>0.118785</td>\n",
+       "      <td>0.082873</td>\n",
+       "      <td>0.679558</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.093923</td>\n",
+       "      <td>0.046961</td>\n",
+       "      <td>0.690608</td>\n",
+       "      <td>0.168508</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0.085635</td>\n",
+       "      <td>0.110497</td>\n",
+       "      <td>0.082873</td>\n",
+       "      <td>0.720994</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0.104972</td>\n",
+       "      <td>0.052486</td>\n",
+       "      <td>0.720994</td>\n",
+       "      <td>0.121547</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0.651934</td>\n",
+       "      <td>0.116022</td>\n",
+       "      <td>0.135359</td>\n",
+       "      <td>0.096685</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>0.220994</td>\n",
+       "      <td>0.157459</td>\n",
+       "      <td>0.154696</td>\n",
+       "      <td>0.466851</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>0.201657</td>\n",
+       "      <td>0.320442</td>\n",
+       "      <td>0.223757</td>\n",
+       "      <td>0.254144</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>0.201657</td>\n",
+       "      <td>0.251381</td>\n",
+       "      <td>0.157459</td>\n",
+       "      <td>0.389503</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>0.383978</td>\n",
+       "      <td>0.135359</td>\n",
+       "      <td>0.254144</td>\n",
+       "      <td>0.226519</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>0.220994</td>\n",
+       "      <td>0.215470</td>\n",
+       "      <td>0.287293</td>\n",
+       "      <td>0.276243</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>0.383978</td>\n",
+       "      <td>0.174033</td>\n",
+       "      <td>0.190608</td>\n",
+       "      <td>0.251381</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>0.093923</td>\n",
+       "      <td>0.088398</td>\n",
+       "      <td>0.088398</td>\n",
+       "      <td>0.729282</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>0.129834</td>\n",
+       "      <td>0.723757</td>\n",
+       "      <td>0.044199</td>\n",
+       "      <td>0.102210</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>0.693370</td>\n",
+       "      <td>0.085635</td>\n",
+       "      <td>0.124309</td>\n",
+       "      <td>0.096685</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>0.174033</td>\n",
+       "      <td>0.676796</td>\n",
+       "      <td>0.046961</td>\n",
+       "      <td>0.102210</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>0.640884</td>\n",
+       "      <td>0.102210</td>\n",
+       "      <td>0.129834</td>\n",
+       "      <td>0.127072</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>0.270718</td>\n",
+       "      <td>0.190608</td>\n",
+       "      <td>0.143646</td>\n",
+       "      <td>0.395028</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>0.334254</td>\n",
+       "      <td>0.113260</td>\n",
+       "      <td>0.058011</td>\n",
+       "      <td>0.494475</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>0.323204</td>\n",
+       "      <td>0.124309</td>\n",
+       "      <td>0.069061</td>\n",
+       "      <td>0.483425</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>0.251381</td>\n",
+       "      <td>0.151934</td>\n",
+       "      <td>0.113260</td>\n",
+       "      <td>0.483425</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>0.287293</td>\n",
+       "      <td>0.174033</td>\n",
+       "      <td>0.168508</td>\n",
+       "      <td>0.370166</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            A         C         G         T\n",
+       "pos                                        \n",
+       "0    0.370166  0.182320  0.201657  0.245856\n",
+       "1    0.408840  0.129834  0.162983  0.298343\n",
+       "2    0.461326  0.074586  0.107735  0.356354\n",
+       "3    0.455801  0.080110  0.121547  0.342541\n",
+       "4    0.370166  0.127072  0.132597  0.370166\n",
+       "5    0.118785  0.118785  0.082873  0.679558\n",
+       "6    0.093923  0.046961  0.690608  0.168508\n",
+       "7    0.085635  0.110497  0.082873  0.720994\n",
+       "8    0.104972  0.052486  0.720994  0.121547\n",
+       "9    0.651934  0.116022  0.135359  0.096685\n",
+       "10   0.220994  0.157459  0.154696  0.466851\n",
+       "11   0.201657  0.320442  0.223757  0.254144\n",
+       "12   0.201657  0.251381  0.157459  0.389503\n",
+       "13   0.383978  0.135359  0.254144  0.226519\n",
+       "14   0.220994  0.215470  0.287293  0.276243\n",
+       "15   0.383978  0.174033  0.190608  0.251381\n",
+       "16   0.093923  0.088398  0.088398  0.729282\n",
+       "17   0.129834  0.723757  0.044199  0.102210\n",
+       "18   0.693370  0.085635  0.124309  0.096685\n",
+       "19   0.174033  0.676796  0.046961  0.102210\n",
+       "20   0.640884  0.102210  0.129834  0.127072\n",
+       "21   0.270718  0.190608  0.143646  0.395028\n",
+       "22   0.334254  0.113260  0.058011  0.494475\n",
+       "23   0.323204  0.124309  0.069061  0.483425\n",
+       "24   0.251381  0.151934  0.113260  0.483425\n",
+       "25   0.287293  0.174033  0.168508  0.370166"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "logomaker.validate_matrix(counts_df)"
    ]
   },
   {
