Finished code review of src/validate.py

--- a/logomaker/examples/Example_CRP.ipynb
+++ b/logomaker/examples/Example_CRP.ipynb
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -204,9 +204,9 @@
     }
    ],
    "source": [
-    "counts_df = logomaker.alignment_to_matrix(seqs, to_type='probability')\n",
+    "prob_df = logomaker.alignment_to_matrix(seqs, to_type='probability')\n",
     "\n",
-    "logo = logomaker.Logo(counts_df, \n",
+    "logo = logomaker.Logo(prob_df, \n",
     "                      color_scheme='purple',\n",
     "                      fade_probabilities=True, \n",
     "                      show_spines=False, \n",
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -345,222 +345,222 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.370166</td>\n",
-       "      <td>0.182320</td>\n",
-       "      <td>0.201657</td>\n",
-       "      <td>0.245856</td>\n",
+       "      <td>133.0</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>88.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.408840</td>\n",
-       "      <td>0.129834</td>\n",
-       "      <td>0.162983</td>\n",
-       "      <td>0.298343</td>\n",
+       "      <td>147.0</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>107.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.461326</td>\n",
-       "      <td>0.074586</td>\n",
-       "      <td>0.107735</td>\n",
-       "      <td>0.356354</td>\n",
+       "      <td>166.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>128.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.455801</td>\n",
-       "      <td>0.080110</td>\n",
-       "      <td>0.121547</td>\n",
-       "      <td>0.342541</td>\n",
+       "      <td>164.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>123.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.370166</td>\n",
-       "      <td>0.127072</td>\n",
-       "      <td>0.132597</td>\n",
-       "      <td>0.370166</td>\n",
+       "      <td>133.0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>133.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>0.118785</td>\n",
-       "      <td>0.118785</td>\n",
-       "      <td>0.082873</td>\n",
-       "      <td>0.679558</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>245.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>0.093923</td>\n",
-       "      <td>0.046961</td>\n",
-       "      <td>0.690608</td>\n",
-       "      <td>0.168508</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>249.0</td>\n",
+       "      <td>60.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>0.085635</td>\n",
-       "      <td>0.110497</td>\n",
-       "      <td>0.082873</td>\n",
-       "      <td>0.720994</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>260.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>0.104972</td>\n",
-       "      <td>0.052486</td>\n",
-       "      <td>0.720994</td>\n",
-       "      <td>0.121547</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>260.0</td>\n",
+       "      <td>43.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>0.651934</td>\n",
-       "      <td>0.116022</td>\n",
-       "      <td>0.135359</td>\n",
-       "      <td>0.096685</td>\n",
+       "      <td>235.0</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>34.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>0.220994</td>\n",
-       "      <td>0.157459</td>\n",
-       "      <td>0.154696</td>\n",
-       "      <td>0.466851</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>168.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>0.201657</td>\n",
-       "      <td>0.320442</td>\n",
-       "      <td>0.223757</td>\n",
-       "      <td>0.254144</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>115.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>91.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>0.201657</td>\n",
-       "      <td>0.251381</td>\n",
-       "      <td>0.157459</td>\n",
-       "      <td>0.389503</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>140.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>0.383978</td>\n",
-       "      <td>0.135359</td>\n",
-       "      <td>0.254144</td>\n",
-       "      <td>0.226519</td>\n",
+       "      <td>138.0</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>81.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>0.220994</td>\n",
-       "      <td>0.215470</td>\n",
-       "      <td>0.287293</td>\n",
-       "      <td>0.276243</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>103.0</td>\n",
+       "      <td>99.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
-       "      <td>0.383978</td>\n",
-       "      <td>0.174033</td>\n",
-       "      <td>0.190608</td>\n",
-       "      <td>0.251381</td>\n",
+       "      <td>138.0</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>90.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
-       "      <td>0.093923</td>\n",
-       "      <td>0.088398</td>\n",
-       "      <td>0.088398</td>\n",
-       "      <td>0.729282</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>263.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
-       "      <td>0.129834</td>\n",
-       "      <td>0.723757</td>\n",
-       "      <td>0.044199</td>\n",
-       "      <td>0.102210</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>261.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>36.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
-       "      <td>0.693370</td>\n",
-       "      <td>0.085635</td>\n",
-       "      <td>0.124309</td>\n",
-       "      <td>0.096685</td>\n",
+       "      <td>250.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>34.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
-       "      <td>0.174033</td>\n",
-       "      <td>0.676796</td>\n",
-       "      <td>0.046961</td>\n",
-       "      <td>0.102210</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>244.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>36.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
-       "      <td>0.640884</td>\n",
-       "      <td>0.102210</td>\n",
-       "      <td>0.129834</td>\n",
-       "      <td>0.127072</td>\n",
+       "      <td>231.0</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>45.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
-       "      <td>0.270718</td>\n",
-       "      <td>0.190608</td>\n",
-       "      <td>0.143646</td>\n",
-       "      <td>0.395028</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>142.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
-       "      <td>0.334254</td>\n",
-       "      <td>0.113260</td>\n",
-       "      <td>0.058011</td>\n",
-       "      <td>0.494475</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>178.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
-       "      <td>0.323204</td>\n",
-       "      <td>0.124309</td>\n",
-       "      <td>0.069061</td>\n",
-       "      <td>0.483425</td>\n",
+       "      <td>116.0</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>174.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24</th>\n",
-       "      <td>0.251381</td>\n",
-       "      <td>0.151934</td>\n",
-       "      <td>0.113260</td>\n",
-       "      <td>0.483425</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>174.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25</th>\n",
-       "      <td>0.287293</td>\n",
-       "      <td>0.174033</td>\n",
-       "      <td>0.168508</td>\n",
-       "      <td>0.370166</td>\n",
+       "      <td>103.0</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>133.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            A         C         G         T\n",
-       "pos                                        \n",
-       "0    0.370166  0.182320  0.201657  0.245856\n",
-       "1    0.408840  0.129834  0.162983  0.298343\n",
-       "2    0.461326  0.074586  0.107735  0.356354\n",
-       "3    0.455801  0.080110  0.121547  0.342541\n",
-       "4    0.370166  0.127072  0.132597  0.370166\n",
-       "5    0.118785  0.118785  0.082873  0.679558\n",
-       "6    0.093923  0.046961  0.690608  0.168508\n",
-       "7    0.085635  0.110497  0.082873  0.720994\n",
-       "8    0.104972  0.052486  0.720994  0.121547\n",
-       "9    0.651934  0.116022  0.135359  0.096685\n",
-       "10   0.220994  0.157459  0.154696  0.466851\n",
-       "11   0.201657  0.320442  0.223757  0.254144\n",
-       "12   0.201657  0.251381  0.157459  0.389503\n",
-       "13   0.383978  0.135359  0.254144  0.226519\n",
-       "14   0.220994  0.215470  0.287293  0.276243\n",
-       "15   0.383978  0.174033  0.190608  0.251381\n",
-       "16   0.093923  0.088398  0.088398  0.729282\n",
-       "17   0.129834  0.723757  0.044199  0.102210\n",
-       "18   0.693370  0.085635  0.124309  0.096685\n",
-       "19   0.174033  0.676796  0.046961  0.102210\n",
-       "20   0.640884  0.102210  0.129834  0.127072\n",
-       "21   0.270718  0.190608  0.143646  0.395028\n",
-       "22   0.334254  0.113260  0.058011  0.494475\n",
-       "23   0.323204  0.124309  0.069061  0.483425\n",
-       "24   0.251381  0.151934  0.113260  0.483425\n",
-       "25   0.287293  0.174033  0.168508  0.370166"
+       "         A      C      G      T\n",
+       "pos                            \n",
+       "0    133.0   65.0   72.0   88.0\n",
+       "1    147.0   46.0   58.0  107.0\n",
+       "2    166.0   26.0   38.0  128.0\n",
+       "3    164.0   28.0   43.0  123.0\n",
+       "4    133.0   45.0   47.0  133.0\n",
+       "5     42.0   42.0   29.0  245.0\n",
+       "6     33.0   16.0  249.0   60.0\n",
+       "7     30.0   39.0   29.0  260.0\n",
+       "8     37.0   18.0  260.0   43.0\n",
+       "9    235.0   41.0   48.0   34.0\n",
+       "10    79.0   56.0   55.0  168.0\n",
+       "11    72.0  115.0   80.0   91.0\n",
+       "12    72.0   90.0   56.0  140.0\n",
+       "13   138.0   48.0   91.0   81.0\n",
+       "14    79.0   77.0  103.0   99.0\n",
+       "15   138.0   62.0   68.0   90.0\n",
+       "16    33.0   31.0   31.0  263.0\n",
+       "17    46.0  261.0   15.0   36.0\n",
+       "18   250.0   30.0   44.0   34.0\n",
+       "19    62.0  244.0   16.0   36.0\n",
+       "20   231.0   36.0   46.0   45.0\n",
+       "21    97.0   68.0   51.0  142.0\n",
+       "22   120.0   40.0   20.0  178.0\n",
+       "23   116.0   44.0   24.0  174.0\n",
+       "24    90.0   54.0   40.0  174.0\n",
+       "25   103.0   62.0   60.0  133.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
